--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ apply plugin: 'java'
 // Apply the application plugin to add support for building an application
 apply plugin: 'application'
 
+// Apply AntLR plugin so we can use the AntLR DOT grammar.
+apply plugin: 'antlr'
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
@@ -24,6 +27,8 @@ repositories {
 }
 
 dependencies {
+    antlr 'org.antlr:antlr4:4.7.2'
+
     // This dependency is found on compile classpath of this component and consumers.
     compile 'com.google.guava:guava:23.0'
 
