--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@
  * user guide available at https://docs.gradle.org/4.4.1/userguide/tutorial_java_projects.html
  */
 
+plugins {
+    id "io.freefair.lombok" version "3.8.1"
+}
+
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 
