--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     compile 'com.google.guava:guava:23.0'
 
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
 }
