--- a/.gitignore
+++ b/.gitignore
@@ -530,4 +530,8 @@ gradle-app.setting
 ### Gradle Patch ###
 **/build/
 
+.idea/compiler.xml
+.idea/misc.xml
+.idea/vcs.xml
+
 # End of https://www.gitignore.io/api/java,linux,macos,gradle,windows,eclipse,intellij
