removing encodings.xml

--- a/.gitignore
+++ b/.gitignore
@@ -533,5 +533,6 @@ gradle-app.setting
 .idea/compiler.xml
 .idea/misc.xml
 .idea/vcs.xml
+.idea/encodings.xml
 
 # End of https://www.gitignore.io/api/java,linux,macos,gradle,windows,eclipse,intellij
