--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,11 @@
  * user guide available at https://docs.gradle.org/4.4.1/userguide/tutorial_java_projects.html
  */
 
+
+
 plugins {
-    id "io.freefair.lombok" version "3.8.1"
+    id 'io.freefair.lombok' version '3.8.1'
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
 }
 
 // Apply the java plugin to add support for Java
@@ -19,6 +22,15 @@ apply plugin: 'application'
 // Apply AntLR plugin so we can use the AntLR DOT grammar.
 apply plugin: 'antlr'
 
+// Workaround to prevent full AntLR being added as a compile dependency when it
+// shouldn't (this adds 13MB to the executable jar!)
+// https://github.com/gradle/gradle/issues/820
+configurations {
+    compile {
+        extendsFrom = extendsFrom.findAll { it != configurations.antlr }
+    }
+}
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
@@ -26,8 +38,11 @@ repositories {
     jcenter()
 }
 
+
+
 dependencies {
     antlr 'org.antlr:antlr4:4.7.2'
+    compile 'org.antlr:antlr4-runtime:4.7.2'
 
     // This dependency is found on compile classpath of this component and consumers.
     compile 'com.google.guava:guava:23.0'
